--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/coordinator"
@@ -26,7 +26,7 @@
                 android:ems="10"
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
-                />
+                android:autofillHints="" />
         <EditText
                 android:id="@+id/edit_text_password"
                 android:layout_width="match_parent"
@@ -34,7 +34,7 @@
                 android:ems="10"
                 android:hint="@string/password"
                 android:inputType="textPassword"
-                />
+                android:autofillHints="" />
         <Button
                 android:id="@+id/button_login"
                 android:layout_width="match_parent"
@@ -42,6 +42,6 @@
                 android:text="@string/login"
                 />
     </LinearLayout>
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
